--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,7 @@
 <h1>Editing Post</h1>
 
 <%= render 'form', post: @post %>
+<%= link_to '質問を追加する', new_question_path %>
 
 <%= link_to 'Show', @post %> |
 <%= link_to 'Back', posts_path %>
