--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,5 +5,7 @@
   <%= @post.user_id %>
 </p>
 
+<%= link_to 'Questions/index(仮)', questions_path %><br>
+
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
