--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -6,14 +6,11 @@
 </p>
 
 <p>
-  <strong>Answer:</strong>
-  <%= @question.answer_id %>
-</p>
-
-<p>
   <strong>Content:</strong>
   <%= @question.content %>
 </p>
+
+<%= link_to '選択肢', answers_path(@question) %><br>
 
 <%= link_to 'Edit', edit_question_path(@question) %> |
 <%= link_to 'Back', questions_path %>
