--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,6 +3,7 @@
 <h1>Posts</h1>
 <% if user_signed_in? %>
   <%= link_to 'ユーザーページ',  user_path(current_user) %>
+  <%= link_to 'ログアウト',  destroy_user_session_path, :method => :delete %>
 <% else %>
   <%= link_to '新規登録', new_user_registration_path %>
   <%= link_to 'ログイン', new_user_session_path %>
@@ -11,7 +12,7 @@
 <table>
   <thead>
     <tr>
-      <th>一覧</th>
+      <th>投稿一覧</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -19,10 +20,13 @@
   <tbody>
     <% @posts.each do |post| %>
       <tr>
-        <td><%= post.user_id %>/<%= post.title %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>ユーザーid:<%= post.user_id %></td>
+        <td>No:<%= post.id %></td>
+        <td><%= post.title %></td>
+        <td>投稿日:<%= post.created_at %></td>
+        <td><%= link_to '質問一覧へ', questions_path(post_id: post.id) %></td>
+        <td><%= link_to '編集', edit_post_path(post) %></td>
+        <td><%= link_to '削除', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
