--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Posts</h1>
+<%= link_to '新規投稿', new_post_path %>
 <% if user_signed_in? %>
   <%= link_to 'ユーザーページ',  user_path(current_user) %>
   <%= link_to 'ログアウト',  destroy_user_session_path, :method => :delete %>
@@ -26,12 +27,8 @@
         <td>投稿日:<%= post.created_at %></td>
         <td><%= link_to '質問一覧へ', questions_path(post_id: post.id) %></td>
         <td><%= link_to '編集', edit_post_path(post) %></td>
-        <td><%= link_to '削除', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to '削除', post, method: :delete, data: { confirm: '削除すると復元できません!本当に削除しますか?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Post', new_post_path %>
