--- a/app/views/nodes/new_a.html.erb
+++ b/app/views/nodes/new_a.html.erb
@@ -1,4 +1,6 @@
-<h1>回答の追加</h1>
+<h2>title:<%= @post_title %></h2><br>
+<h2>質問:<%= @node_q.content %></h2>
+<h2>回答の追加</h2>
 
 <%= render 'form_a', node: @node %>
 
