--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,6 @@
   <%= @user.name %>
 </p>
 
-<%= link_to 'Edit',  edit_user_registration_path %> |
+<%= link_to 'ユーザー情報編集',  edit_user_registration_path %> |
 <%= link_to 'ログアウト',  destroy_user_session_path, :method => :delete %> |
-<%= link_to 'Back', users_path %>
+<%= link_to '投稿一覧へ', posts_path %>
