--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,3 +9,5 @@
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
+<%= javascript_pack_tag 'tree_structure' %>
+<%= stylesheet_pack_tag 'tree_structure' %>
