--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,7 +10,7 @@
   <%= link_to 'ログイン', new_user_session_path %>
 <% end %>
 
-<table>
+<!-- <table>
   <thead>
     <tr>
       <th>投稿一覧</th>
@@ -31,4 +31,7 @@
       </tr>
     <% end %>
   </tbody>
-</table>
+</table> -->
+
+<%= javascript_pack_tag 'main' %>
+<%= stylesheet_pack_tag 'main' %>
