--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,12 +3,23 @@
 <div id="container" class="ui stackable three column grid">
   <% @posts.each do |post| %>
   <div class="column">
-    <div id="posts_segment" class="ui segment">
-      <p>ユーザーと作成日時表示</p>
-      <p>画像予定</p>
-      <p><%= post.title %></p>
-      <p><%= link_to '質問に答える', nodes_path(post_id: post.id) %></p>
-      <p><%= link_to '回答を見る', post_path(id: post.id) %></p>
+    <div class="ui segments">
+      <div class="ui segment" id="user_and_date">
+        <div class="left">投稿者:<%= post.user.name %></div>
+        <% if post.created_at == post.updated_at %>
+          <div class="right">投稿日時:<%= post.created_at %></div>
+        <% else %>
+          <div class="right">投稿日時:<%= post.created_at %></div>
+        <% end %>
+      </div>
+      <div class="ui segment">画像予定</div>
+      <div class="ui segment" id="post_title"><%= post.title %></div>
+      <div class="ui segment attached button" onclick="location.href='/nodes?post_id=<%= post.id %>'">
+        質問に答える
+      </div>
+      <div class="ui segment attached button" onclick="location.href='/posts/<%= post.id %>'">
+        回答を見る
+      </div>
     </div>
   </div>
   <% end %>
