--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -14,6 +14,7 @@
   <div class="field">
     <%= f.label :画像 %>
     <%= f.file_field :img, class: "image" %>
+    <p><%= f.check_box :remove_img %>画像を削除する</p>
   </div>
 
   <div class="field">
