--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,6 +25,9 @@
         <i class="fas fa-sign-out-alt"> ログアウト</i>
       </a>
     <% else %>
+      <a class="item" href="/users/sign_up">
+        <i class="fas fa-user-plus"> 新規ユーザー作成</i>
+      </a>
       <a class="item" href="/users/sign_in">
         <i class="fas fa-sign-in-alt"> ログイン</i>
       </a>
