--- a/app/views/nodes/show.html.erb
+++ b/app/views/nodes/show.html.erb
@@ -1,19 +1,16 @@
-<p id="notice"><%= notice %></p>
+<div class="ui one column stackable center aligned page grid">
+  <div class="column fourteen wide">
+    <div class="ui segment users_box">
+      <p id="notice"><%= notice %></p>
+      <h1>Q:<%= @result["question"].content %></h1>
+      <% @result["answers"].each do |answer| %>
+        <div class="ui segment attached button" onclick="location.href='/nodes/<%= answer.id %>'"><%= answer.content %></div>
+      <% end %>
+      <% if @result["answers"].length < 4 %>
+        <br><div class="ui segment attached button" onclick="location.href='/nodes/'">選択肢を追加する</div>
+      <% end %>
+    </div>
+  </div>
+</div>
 
-<p>
-  <strong>Post:</strong>
-  <%= @node.post_id %>
-</p>
-
-<p>
-  <strong>Content:</strong>
-  <%= @node.content %>
-</p>
-
-<p>
-  <strong>Parent:</strong>
-  <%= @node.parent_id %>
-</p>
-
-<%= link_to 'Edit', edit_node_path(@node) %> |
-<%= link_to 'Back', nodes_path %>
+<%= link_to '投稿一覧へ', posts_path %>
