--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,9 @@
-<h1>New Post</h1>
-<%= render 'form', post: @post %>
-
-<%= link_to 'Back', posts_path %>
+<div class="ui one column stackable center aligned page grid">
+   <div class="column ten wide">
+     <div class="ui segment users_box">
+       <h1>新しいチャートの投稿</h1>
+       <%= render 'form', post: @post %>
+       <%= link_to 'Back', posts_path %>
+    </div>
+  </div>
+</div>
