--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,14 @@
+<!-- <div id="modal" class="modal">
+       <div class="modal-content">
+           <div class="modal-body">
+               <h1>hello</h1>
+               <input type="button" id="closeBtn" value="close">  <= 追加
+           </div>
+       </div>
+   </div>
+
+<input type="button" id="btn" value='click me'> -->
+
 <p id="notice"><%= notice %></p>
 
 <div id="container" class="ui stackable three column grid">
