--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,15 +1,9 @@
 <%= form_with(model: post, local: true) do |f| %>
-  <% if post.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(post.errors.count, "error") %> prohibited this post from being saved:</h2>
-
-      <ul>
-        <% post.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <div class="field">
+    <h2>チャートのタイトル</h2>
+    <p id="notice_new_q"><%= flash[:notice] %></p>
+    <%= f.text_field :title %>
+  </div>
 
   <div class="field">
     <%= f.label :画像 %>
@@ -17,13 +11,8 @@
     <p><%= f.check_box :remove_img %>画像を削除する</p>
   </div>
 
-  <div class="field">
-    <%= f.label :title %>
-    <%= f.text_field :title %>
-  </div>
-
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit '次へ' %>
   </div>
 
 <% end %>
