--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,14 +1,16 @@
+<%= javascript_pack_tag 'tree_structure' %>
+<%= stylesheet_pack_tag 'tree_structure' %>
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>User:</strong>
-  <%= @post.user_id %>
+  <strong>投稿者:</strong>
+  <%= @post.user.name %>
 </p>
-
-<%= link_to 'Questions/index(仮)', questions_path %><br>
+<h2>
+  <%= @post.title %>
+</h2>
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
 
-<%= javascript_pack_tag 'tree_structure' %>
-<%= stylesheet_pack_tag 'tree_structure' %>
+<%= javascript_pack_tag 'modal' %>
