[add+fix] 円グラフのパイを末端nodeにする #98

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,7 +14,7 @@
 <div id="modal" class="modal">
   <div class="modal-content">
     <div class="ui segment modal-body">
-      <h1>あなたと同じ行動をとる人は<br><%= @node_total %>人/<%= @post.total %>人です！</h1>
+      <h1>あなたと同じ行動をとる人は<br><%= @node.total %>人/<%= @post.total %>人です！</h1>
       <br>
       <!-- <br><br><br><br><br><br><br> -->
       <%= pie_chart(@chart) %>
