--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,7 @@
  */
 
 @import "semantic-ui";
+
 #container {
   margin: 10px;
 }
@@ -29,6 +30,19 @@
     color: #FFFFFF;
   }
 }
+
+form input[type=submit], form input[type=button], form button {
+  background-image: linear-gradient(0deg, #20b2aa, #20b2aa);
+  border-style: none;
+}
+form input[type=submit]:not(.disabled):hover, form input[type=button]:not(.disabled):hover, form button:not(.disabled):hover {
+  background-image: linear-gradient(0deg, #20a098, #20a098);
+  border-style: none;
+}
+:focus {
+    outline: none;
+}
+
 
 #index_title {
     font-size: 2em;
