--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,8 @@
 <p id="notice"><%= notice %></p>
+<%= form_with url: users_search_path, method: :get, local: true do |f| %>
+  <%= f.text_field :name, id: "cross_search"%>
+  <%= f.submit :search, value: "検索" %>
+<% end %>
 
 <h1>Users</h1>
 
@@ -15,7 +19,6 @@
       <tr>
         <td><%= user.name %></td>
         <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
@@ -23,5 +26,3 @@
 </table>
 
 <br>
-
-<%= link_to 'New User', new_user_path %>
