--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,52 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="ui one column stackable center aligned page grid">
+   <div class="column ten wide">
+     <div class="ui segment users_box">
+       <h2>アカウント情報編集</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+       　<%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+       <div class="field">
+         <%= f.label :email %><br />
+         <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+       </div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+       <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+       　<div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+       <% end %>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
+       <div class="field">
+         <%= f.label :password %> <i>(変更しない場合は空白のままにしてください。)</i><br />
+         <%= f.password_field :password, autocomplete: "new-password" %>
+         <% if @minimum_password_length %>
+         　<br />
+         　<em>半角英数<%= @minimum_password_length %>文字以上</em>
+         <% end %>
+       </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+       <div class="field">
+         <%= f.label :password_confirmation %>
+         <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+       </div>
 
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
+       <div class="field">
+         <%= f.label :current_password %>
+         <%= f.password_field :current_password, autocomplete: "current-password" %>
+       </div>
 
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
+       <div class="actions">
+         <%= f.submit "更新" %>
+       </div>
+       <% end %>
 
-<h3>Cancel my account</h3>
+       <br>
+       <%= button_to "ユーザー情報の編集はこちら", edit_attributes_path(resource), method: :get %>
+       <br><br><br>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+       <h3>アカウント削除はこちら</h3>
+       <p><%= button_to "アカウント削除", registration_path(resource_name), data: { confirm: "アカウントを削除すると復元できません。本当に削除しますか?" }, method: :delete %></p>
 
-<%= link_to "Back", :back %>
+       <%= link_to "Back", :back %>
+     </div>
+   </div>
+</div>
