--- a/app/views/users/attributes.html.erb
+++ b/app/views/users/attributes.html.erb
@@ -1,15 +1,15 @@
 <div class="ui one column stackable center aligned page grid">
    <div class="column ten wide">
      <div class="ui segment users_box">
-       <h1>属性の設定</h1>
-       <%= form_with url: attributes_users_path, local: true do |f| %>
+       <h1>ユーザー情報設定</h1>
+       <%= form_with url: save_attributes_users_path, local: true do |f| %>
          <div class="field">
            <%= f.label :年齢 %>
            <%= f.number_field :age %>
          </div>
          <div class="field">
            <%= f.label :性別 %>
-           <%= f.select :sex, {'-': 1, '男性': 2, '女性': 3, 'その他': 4}, { include_blank: '選択してください'}, { class: 'form-control' , required: true } %>
+           <%= f.collection_select(:sex, @sex, :id, :sex, prompt: "選択してください") %>
          </div>
          <div class="field">
            <%= f.label :身長 %>
@@ -21,11 +21,11 @@
          </div>
          <div class="field">
            <%= f.label :出身 %>
-           <%= f.text_field :birthplace %>
+           <%= f.collection_select(:birthplace, @birthplace, :id, :birthplace, prompt: "選択してください") %>
          </div>
          <div class="field">
            <%= f.label :居住地 %>
-           <%= f.text_field :residence %>
+           <%= f.collection_select(:residence, @residence, :id, :residence, prompt: "選択してください") %>
          </div>
          <div class="field">
            <%= f.label :職業 %>
@@ -33,8 +33,7 @@
          </div>
          <div class="field">
            <%= f.label :同居人 %>
-           <%= f.select :live_with, {'-': 1, '一人暮らし': 2, '実家暮らし': 3, '兄弟姉妹': 4, '友達': 5, 'ペット': 6, 'その他': 7},
-                                    { include_blank: '選択してください'}, { class: 'form-control' , required: true } %>
+           <%= f.collection_select(:housemate, @housemate, :id, :housemate, prompt: "選択してください") %>
          </div>
          <!-- <div class="field">
            <%= f.label :趣味 %>
@@ -44,7 +43,30 @@
            <%= f.submit '次へ' %>
          </div>
 
+         <div class="actions">
+           <%= f.submit 'スキップ' %>
+         </div>
+
+         <% if @r_source = "registrations" %>
+         <div id="modal_users" class="modal">
+           <div class="modal-content">
+             <div class="ui segment modal-body">
+               <br>
+               <p>ユーザー登録が完了しました!</p>
+               <p>引き続きユーザー情報を設定しましょう!</p>
+               <br>
+               <div class="actions">
+                 <%= f.submit 'スキップ' %>
+               </div>
+               <input type="button" id="closeBtn_users" class="ui segment attached button" value="close">
+             </div>
+           </div>
+         </div>
+         <% end %>
+
        <% end %>
     </div>
   </div>
 </div>
+
+<%= javascript_pack_tag 'modal_users_attributes' %>
